--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
         <activity android:name=".SRRecyclerViewActivity"/>
         <activity android:name=".SRListViewActivity"/>
+        <activity android:name=".SRGridViewActivity"/>
     </application>
 
 </manifest>
