--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -16,9 +17,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SRRecyclerViewActivity"/>
-        <activity android:name=".SRListViewActivity"/>
-        <activity android:name=".SRGridViewActivity"/>
+        <activity android:name=".SRRecyclerViewActivity"
+                  android:label="SRRecyclerViewActivity"/>
+        <activity android:name=".SRListViewActivity"
+                  android:label="SRListViewActivity"/>
+        <activity android:name=".SRGridViewActivity"
+                  android:label="SRGridViewActivity"/>
     </application>
 
 </manifest>
