demo 增加 ultra ptr支持

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
                   android:label="SRListViewActivity"/>
         <activity android:name=".SRGridViewActivity"
                   android:label="SRGridViewActivity"/>
+
+        <activity android:name=".PtrListViewActivity"
+                  android:label="PtrListViewActivity"/>
     </application>
 
 </manifest>
